Improve touch behavior and fix hint text overlap

--- a/view/adminhtml/web/css/configscopehints.less
+++ b/view/adminhtml/web/css/configscopehints.less
@@ -15,6 +15,7 @@
         cursor: pointer;
         line-height: 40px; //improve touch experience
         position: relative;
+        padding-right: 4rem; //prevent arrow from overlapping text
 
         &:before {
             font-family: "Admin Icons";
